--- a/Notes/Centos7/Centos7常用命令/防火墙.md
+++ b/Notes/Centos7/Centos7常用命令/防火墙.md
@@ -1,6 +1,7 @@
-﻿###一：Centos 默认防火墙 firewall
-	firewall相关命令
-	
+﻿##### ###一：Centos 默认防火墙 firewall
+
+##### 	firewall相关命令
+
 	查看防火墙状态：
 		 firewall-cmd --state
 	关闭防火墙
@@ -11,16 +12,17 @@
 		 firewall-cmd --reload
 	禁止开机启动防火墙
 		 systemctl disable firewalld.service
-    firewall-cmd --zone=public --list-service
+	查看防火墙允许的服务
+		firewall-cmd --zone=public --list-service
 	开启端口
 	firewall-cmd --zone=public --add-port=80/tcp --permanent
 	firewall-cmd --zone=public --add-port=60000-60020/tcp --permanent
 		--zone #作用域
 		--add-port=80/tcp #添加端口，格式为：端口/通讯协议
 		--permanent #永久生效，没有此参数重启后失效
-
-	 查看防火墙规则
 	
+	 查看防火墙规则
+	firewall-cmd --list-all   列出防火墙规则
 	firewall-cmd --get-zones                       ##列出支持的zone
 	firewall-cmd --get-services                    ##列出支持的服务，在列表中的服务是放行的
 	firewall-cmd --query-service ftp               ##查看ftp服务是否支持，返回yes或者no
@@ -31,17 +33,42 @@
 	iptables -L -n                                 ##查看规则，这个命令是和iptables的相同的
 	man firewall-cmd                               ##查看帮助
 	
+	
+	
 
-###二：iptables 相关操作
-    停止iptables服务
-        systemctl stop iptables
-    禁用iptables服务
-        systemctl mask iptables
-	安装iptables防火墙
-		systemctl start iptalbes.service
-	重启iptalbes防火墙
-		systemctl restart iptalbes.service
-	关闭iptables防火墙
-		systemctl stop iptables.service
-	查看iptables防火墙状态的命令是：
-		systemctl status iptables.service
+##### firewall端口转发
+
+```
+1)开启路由转发
+echo 'net.ipv4.ip_forward = 1' >> /etc/sysctl.conf
+sysctl -p
+
+2)开启防火墙的流量伪装功能
+firewall-cmd --zone=public --permanent --add-masquerade
+
+3)
+#配置TCP流量转发
+firewall-cmd --add-forward-port=port=8080:proto=tcp:toaddr=2.2.2.2:toport=666 --permanent
+#将本地8080端口，转发到2.2.2.2的tcp666端口。
+
+#配置UDP流量转发
+firewall-cmd --add-forward-port=port=8080:proto=udp:toaddr=2.2.2.2:toport=666 --permanent
+#将本地8080端口，转发到2.2.2.2的udp666端口。
+```
+
+
+
+##### iptables 相关操作
+
+​    停止iptables服务
+​        systemctl stop iptables
+​    禁用iptables服务
+​        systemctl mask iptables
+​	安装iptables防火墙
+​		systemctl start iptalbes.service
+​	重启iptalbes防火墙
+​		systemctl restart iptalbes.service
+​	关闭iptables防火墙
+​		systemctl stop iptables.service
+​	查看iptables防火墙状态的命令是：
+​		systemctl status iptables.service
