--- a/Notes/Java多线程/多线程.md
+++ b/Notes/Java多线程/多线程.md
@@ -1,4 +1,16 @@
-1.Thread常用方法
+##### Java中线程有四种创建方式：
+
+l 继承Thread类
+
+l 实现Runnable接口
+
+l 实现Callable接口
+
+l 线程池
+
+
+
+###### 1.Thread常用方法
 
 ```
 线程的创建：
@@ -20,3 +32,36 @@
 	static Thread currentThread()        返回当前运行的线程引用
 ```
 
+###### 2.实现Runnable接口
+
+###### 3.实现Callable接口
+
+###### 4.线程池
+
+Executor接口：
+
+　　声明了execute(Runnable runnable)方法，执行任务代码
+
+ExecutorService接口：
+
+　　继承Executor接口，声明方法：submit、invokeAll、invokeAny以及shutDown等
+
+AbstractExecutorService抽象类：
+
+　　实现ExecutorService接口，基本实现ExecutorService中声明的所有方法
+
+ScheduledExecutorService接口：
+
+　　继承ExecutorService接口，声明定时执行任务方法
+
+ThreadPoolExecutor类：
+
+　　继承类AbstractExecutorService，实现execute、submit、shutdown、shutdownNow方法
+
+ScheduledThreadPoolExecutor类：
+
+　　继承ThreadPoolExecutor类，实现ScheduledExecutorService接口并实现其中的方法
+
+Executors类：
+
+　　提供快速创建线程池的方法
