更新常用工具地址

--- a/常用工具地址.md
+++ b/常用工具地址.md
@@ -4,4 +4,16 @@
 https://github.com/jgm/pandoc
 ```
 
+#开源人事管理系统
 
+```
+https://github.com/lenve/vhrhttps://github.com/lenve/vhr
+```
+
+
+
+#开源博客系统（拾壹博客）
+
+```
+https://gitee.com/quequnlong/shiyi-bloghttps://gitee.com/quequnlong/shiyi-blog
+```
